# Twin-Stick-Shooter-SDL2

./: .gitignore  Bullet.cpp  CMakeLists.txt  CMakePresets.json  Entity.cpp  GameOverScene.cpp  GameScene.cpp  PauseMenu.cpp  Player.cpp  SceneManager.cpp  Text.cpp  main.cpp  timercpp.cpp
res/spritesheets/: animationData.json
src/cpp/: Animation.cpp  AnimationManager.cpp  Animator.cpp  Bullet.cpp  Button.cpp  Camera.cpp  Enemy.cpp  EnemyTypes.cpp  Entity.cpp  Game.cpp  GameOverScene.cpp  GameScene.cpp  Helpers.cpp  JsonParser.cpp  MainMenu.cpp  PauseMenu.cpp  Player.cpp  Scene.cpp  SceneManager.cpp  Text.cpp  UI.cpp  main.cpp
src/include/headers/: Animation.h  AnimationManager.h  Animator.h  Bullet.h  Button.h  Camera.h  Enemy.h  EnemyTypes.h  Entity.h  Game.h  GameOverScene.h  GameScene.h  Helpers.h  JsonParser.h  JsonPaser.h  MainMenu.h  PauseMenu.h  Player.h  Scene.h  SceneManager.h  Text.h  UI.h  timercpp.h
src/include/headers/interfaces/: Idamageable.h
